# sep-bewertung

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
docs/: Bewertungs-Methodik.md  befundbericht-und-plan.md  bewertungskriterien.md  funktionsweise.md  llm-integration.md  nutzung.md  review-fix-plan.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-30-verbesserungspaket.md
docs/superpowers/specs/: 2026-05-30-verbesserungspaket-design.md  2026-06-01-gen-mapping-design.md  2026-06-01-teams-kombinierter-name-design.md  2026-06-01-uv-umbau-design.md
skripte/: build_overview.py  build_xlsx.py  config.yaml  evaluate_team.py  fill_pdf.py  gen_mapping.py  llm.py  run_all.py  team_mapping.example.json  teams.example.txt  test_evaluate.py  test_gen_mapping.py
teams/: README.md
